# LongNumber

./: .gitignore  CMakeLists.txt  README.md  Test.cpp  library.cpp  library.h
Google_tests/: CMakeLists.txt
Headers/: library.h
Source/: Test.cpp  library.cpp
cmake/: core.cmake
get/: GetPi.cpp
getpi/: GetPi.cpp
test/: Test.cpp
